@@ -1,5 +1,8 @@
 Mon Jun 27 12:52:01 2011 Till Kamppeter <till DOT kamppeter AT gmail DOT com>
 
+	* Moved the cms profiles from cups/model/MFR/cms to cups/profiles/MFR
+	  to stop making cups-driverd issuing error messages (SF: #3319110)
+
 	* Add missing delete[] in two error paths (SF patch #3302528).
 
 	* Fixed double free in pstoqpdl filter, which happens when the
